--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 aniso8601==8.0.0
+apispec==0.38.0
 attrs==19.3.0
 Click==7.0
 Flask==1.1.1
+flask-marshmallow==0.10.1
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
@@ -10,10 +12,14 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.2.0
 MarkupSafe==1.1.1
+marshmallow==2.20.5
+marshmallow-sqlalchemy==0.21.0
 more-itertools==8.0.2
 pyrsistent==0.15.6
 pytz==2019.3
+PyYAML==5.2
 six==1.13.0
 SQLAlchemy==1.3.12
+webargs==5.5.2
 Werkzeug==0.16.0
 zipp==0.6.0
